--- a/aws-robomaker-simulation-ros-pkgs/package.xml
+++ b/aws-robomaker-simulation-ros-pkgs/package.xml
@@ -8,8 +8,11 @@
   <license>MIT</license>
   <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
   <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
+
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>robomaker_simulation_msgs</build_depend>
+
+  <exec_depend>robomaker_simulation_msgs</exec_depend>
+
   <export>
     <metapackage/>
   </export>
