--- a/aws-robomaker-simulation-ros-pkgs/package.xml
+++ b/aws-robomaker-simulation-ros-pkgs/package.xml
@@ -5,7 +5,7 @@
   <description>
     AWS RoboMaker package for accessing the simulation service.
   </description>
-  <license>MIT</license>
+  <license>Apache 2.0</license>
   <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
   <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
 
