Add dashing support

--- a/aws_robomaker_simulation_ros_pkgs/CMakeLists.txt
+++ b/aws_robomaker_simulation_ros_pkgs/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.7.2)
 project(aws_robomaker_simulation_ros_pkgs)
-find_package(catkin REQUIRED)
-catkin_metapackage()
+find_package(ament_cmake REQUIRED)
+ament_package()
