--- a/robomaker_simulation_msgs/CMakeLists.txt
+++ b/robomaker_simulation_msgs/CMakeLists.txt
@@ -1,29 +1,24 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.7.2)
 project(robomaker_simulation_msgs)
 
-find_package(catkin REQUIRED COMPONENTS
-    rospy
-    std_msgs
-    message_generation
+find_package(ament_cmake REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+
+set(msg_files
+  "msg/Tag.msg"
+)
+set(srv_files
+  "srv/AddTags.srv"
+  "srv/Cancel.srv"
+  "srv/ListTags.srv"
+  "srv/RemoveTags.srv"
 )
 
-add_message_files(
-	FILES
-	Tag.msg
+rosidl_generate_interfaces(${PROJECT_NAME}
+  ${msg_files}
+  ${srv_files}
 )
 
-add_service_files(
-	FILES
-	Cancel.srv
-	ListTags.srv
-	AddTags.srv
-	RemoveTags.srv
-)
+ament_export_dependencies(rosidl_default_runtime)
 
-generate_messages(
-    DEPENDENCIES std_msgs
-)
-
-catkin_package(
-	CATKIN_DEPENDS message_runtime std_msgs
-)
+ament_package()
