--- a/aws_robomaker_simulation_ros_pkgs/package.xml
+++ b/aws_robomaker_simulation_ros_pkgs/package.xml
@@ -8,12 +8,10 @@
   <license>Apache 2.0</license>
   <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
   <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
-
-  <buildtool_depend>catkin</buildtool_depend>
-
-  <exec_depend>robomaker_simulation_msgs</exec_depend>
+  
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <export>
-    <metapackage/>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
