--- a/robomaker_simulation_msgs/package.xml
+++ b/robomaker_simulation_msgs/package.xml
@@ -3,7 +3,7 @@
   <name>robomaker_simulation_msgs</name>
   <version>1.1.0</version>
   <description>
-    AWS RoboMaker package for accessing the service
+    AWS RoboMaker package containing ROS service definitions for service endpoints provided inside of an AWS RoboMaker simulation.
   </description>
   <license>Apache 2.0</license>
   <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
