--- a/aws_robomaker_gazebo_ros/env-hooks/worldforge.overlay.sh.in
+++ b/aws_robomaker_gazebo_ros/env-hooks/worldforge.overlay.sh.in
@@ -2,6 +2,7 @@
 
 # the following variable will only be set by AWS RoboMaker, when run in AWS RoboMaker
 # AWS_ROBOMAKER_WORLDFORGE_WORLD_PACKAGE_OVERRIDE
+# AWS_ROBOMAKER_WORLDFORGE_SETUP_OVERRIDE
 
 if [[ -n ${AWS_ROBOMAKER_WORLDFORGE_WORLD_PACKAGE_OVERRIDE} ]]; then
     # buffer and reset _colcon_prefix_sh_source_script as sourcing setup.sh will unset this function variable
